--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">skillSyncApp</string>
-    <string name="log_in">Log in</string>
+    <string name="sign_in">Sign in</string>
     <string name="lets_log_in_title">Lets sign you in.</string>
     <string name="sign_in_description_text">Sign in with your data that have entered during your registration</string>
     <string name="email">Email</string>
