--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,9 @@
     <string name="post_new_project_title">Post a new project</string>
     <string name="post_new_project_text">Add the information about the project that you want to create</string>
     <string name="post">Post</string>
-    <string name="title_activity_new_post_screen">newPostScreen</string>
-    <string name="title_activity_main_screen">MainScreen</string>
-    <string name="post_image">post_image</string>
+<!--    <string name="title_activity_new_post_screen">newPostScreen</string>-->
+<!--    <string name="title_activity_main_screen">MainScreen</string>-->
+<!--    <string name="post_image">post_image</string>-->
 
     <string name="develop_group">Develop Group</string>
     <string name="collage_of_management">Collage Of Management</string>
@@ -28,4 +28,12 @@
     <string name="instructions_forget_password">Enter your email address to initiate the password recovery process. We\'ll email you password reset instructions.</string>
     <string name="reset_password">Reset Password</string>
     <string name="back_to_sign_in">Back to Sign in</string>
+
+    <string name="sign_up_group_title">Get Started</string>
+    <string name="sign_up_group_sub_title">By creating a free account</string>
+    <string name="team_name">Team Name</string>
+    <string name="team_institution">Institution</string>
+    <string name="team_description">Tell us about you</string>
+    <string name="team_members_name">Enter teams members name</string>
+    <string name="password">Password</string>
 </resources>
