fix sign in as group

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,11 @@
     <string name="post_new_project_title">Post a new project</string>
     <string name="post_new_project_text">Add the information about the project that you want to create</string>
     <string name="post">Post</string>
-<!--    <string name="title_activity_new_post_screen">newPostScreen</string>-->
-<!--    <string name="title_activity_main_screen">MainScreen</string>-->
-<!--    <string name="post_image">post_image</string>-->
+    <string name="project_name_title">Project Informations</string>
+    <string name="project_name_hint">Enter the project name here</string>
+    <string name="project_description_hint">Enter the description here</string>
+    <string name="project_deadline_title">Set the expected deadline</string>
+    <string name="project__availability_title">What is your availability?</string>
 
     <string name="develop_group">Develop Group</string>
     <string name="collage_of_management">Collage Of Management</string>
