--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,13 +40,16 @@
     <string name="team_description_title">Tell us about you</string>
     <string name="team_members_name_title">Enter teams members name</string>
     <string name="password_title">Password</string>
-
     <string name="company_name_title">Company Name</string>
+
+    <string name="blank_error">Cannot be blank</string>
+    <string name="email_error">Write a valid email address</string>
+
 
     <string name="password">Password</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="address">Address..</string>
+    <string name="address">Address</string>
     <string name="company_name">Company Name</string>
     <string name="create_a_free_account">create a free account</string>
     <string name="get_started">Get Started</string>
