--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,5 +67,9 @@
     <string name="add_post">Add Post</string>
     <string name="map">Map</string>
     <string name="profile">Profile</string>
+    <string name="company_name">Company Name</string>
+    <string name="edit_button">edit_button</string>
+    <string name="about_us">About Us</string>
+    <string name="about_project">About Project</string>
 
 </resources>
