--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="edit_post">Edit Post</string>
     <string name="project_name">Project Name</string>
 
+    <string name="error_msg">One or more of the credentials you entered are incorrect. Please try again.</string>
 </resources>
