--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,6 @@
     <string name="project_name">Project Name</string>
 
     <string name="error_msg">One or more of the credentials you entered are incorrect. Please try again.</string>
+    <string name="edit_group_profile_title">Edit Group Details</string>
+    <string name="group_profile">Update Profile</string>
 </resources>
