--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,6 @@
     <string name="error_msg">One or more of the credentials you entered are incorrect. Please try again.</string>
     <string name="edit_group_profile_title">Edit Group Details</string>
     <string name="group_profile">Update Profile</string>
+    <string name="back">Back</string>
+    <string name="log_out">Log Out</string>
 </resources>
