on post click - show owner profile (#77)
Co-authored-by: hadar zaguri <hadarza@wix.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,6 @@
 
     <string name="edit_company_profile_title">Edit Company Details</string>
     <string name="company_profile">Update Company</string>
+    <string name="back">Back</string>
+    <string name="log_out">Log Out</string>
 </resources>
