edit group profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,7 +69,7 @@
     <string name="about_project">About Project</string>
     <string name="edit_project_details">Edit Project Details</string>
     <string name="add_the_information_about_the_project_that_you_want_to_create">Add the information about the project that you want to create</string>
-    <string name="edit_post">Edit Post</string>
+    <string name="edit_post">Update Post</string>
     <string name="project_name">Project Name</string>
 
     <string name="error_msg">One or more of the credentials you entered are incorrect. Please try again.</string>
