--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,5 @@
     <string name="company_profile">Update Company</string>
     <string name="back">Back</string>
     <string name="log_out">Log Out</string>
+    <string name="explore_companies">Explore Companies</string>
 </resources>
